--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 
 <!--
 Author: WebThemez
-Author URL: http://webthemez.com 
+Author URL: http://webthemez.com
 -->
 <!DOCTYPE HTML>
-<!--[if lt IE 7 ]> <html lang="en" class="ie ie6"> <![endif]--> 
-<!--[if IE 7 ]>	<html lang="en" class="ie ie7"> <![endif]--> 
-<!--[if IE 8 ]>	<html lang="en" class="ie ie8"> <![endif]--> 
-<!--[if IE 9 ]>	<html lang="en" class="ie ie9"> <![endif]--> 
+<!--[if lt IE 7 ]> <html lang="en" class="ie ie6"> <![endif]-->
+<!--[if IE 7 ]>	<html lang="en" class="ie ie7"> <![endif]-->
+<!--[if IE 8 ]>	<html lang="en" class="ie ie8"> <![endif]-->
+<!--[if IE 9 ]>	<html lang="en" class="ie ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
 <title>clever - A Simple Responsive Coming Soon!!!</title>
 <meta name="description" content="Trendset Page under construction">
-<meta http-equiv="X-UA-Compatible" content="chrome=1"> 
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body id="home">
-<div id="Content" class="wrapper"> 
+<div id="Content" class="wrapper">
 <div class="top-wrapper">
 <div id="header">
 <div class="wrapper">
-	<h1><a href="#" class="logo">clever</a></h1>	
+	<h1><a href="#" class="logo">Rule 20-20-20</a></h1>	
 	</div>
 </div>
-<div class="countdown styled"></div> 
+<div class="countdown styled"></div>
 
 </div>
 <div class="bottom-wrapper">
 <h2 class="intro">We've been working on something awesome <br/>We will be back soon.</h2>
-<div id="subscribe">  
-	<form method="POST" action="subscribe.php"> 
-		<p class="subscribe-input"><input type="text" name="Email" size="20" value="Subscribe your e-mail Id"><input type="submit" value="Submit" name="Submit"></p> 
+<div id="subscribe">
+	<form method="POST" action="subscribe.php">
+		<p class="subscribe-input"><input type="text" name="Email" size="20" value="Subscribe your e-mail Id"><input type="submit" value="Submit" name="Submit"></p>
 	</form>
 
 	<div id="socialIcons">
-		<ul> 
+		<ul>
 			<li><a href="" title="Twitter" class="twitterIcon"></a></li>
 			<li><a href="" title="facebook" class="facebookIcon"></a></li>
 			<li><a href="" title="linkedIn" class="linkedInIcon"></a></li>
@@ -46,7 +46,7 @@ Author URL: http://webthemez.com
 </div>
 <span class="tempBy">Template by: <a href="http://webthemez.com" alt="webthemez">WebThemez.com</a></span>
 </div>
-</div> 
+</div>
 
 <!--Scripts-->
 <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
