set timer prototype
Signed-off-by: Alessio Malerba <al.malerba@reply.it>

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@ Author URL: http://webthemez.com
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
+<script> function decrease() {
+		document.getElementById('lblSecs').value = parseInt(document.getElementById('lblSecs').value) - 1;
+		alert("a");
+	}
+</script>
+
 <body id="home">
 <div id="Content" class="wrapper">
 <div class="top-wrapper">
@@ -53,6 +59,20 @@ Author URL: http://webthemez.com
 <script type="text/javascript" src="js/Backstretch.js"></script>
 <script type="text/javascript" src="js/jquery.countdown.js"></script>
 <script type="text/javascript" src="js/global.js"></script>
+
+<script>
+
+
+	 function timer() {
+		 for(let i=0; i<20; i++) {
+			 for(let j=0; j<60; j++;) {
+
+			 }
+		 }
+	 }
+
+	 //decrease();
+</script>
 
 </body>
 </html>
