--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Author URL: http://webthemez.com
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>clever - A Simple Responsive Coming Soon!!!</title>
+<title>Rule 20-20-20</title>
 <meta name="description" content="Trendset Page under construction">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -28,17 +28,20 @@ Author URL: http://webthemez.com
 <div class="top-wrapper">
 <div id="header">
 <div class="wrapper">
-	<h1><a href="#" class="logo">Rule 20-20-20</a></h1>	
+	<h1><a href="#" class="logo">20-20-20</a></h1>
 	</div>
 </div>
 <div class="countdown styled"></div>
 
 </div>
+
 <div class="bottom-wrapper">
-<h2 class="intro">We've been working on something awesome <br/>We will be back soon.</h2>
+<!--<h2 class="intro">We've been working on something awesome <br/>We will be back soon.</h2>
+<input type="text" name="Email" size="20" value="Subscribe your e-mail Id">-->
 <div id="subscribe">
-	<form method="POST" action="subscribe.php">
-		<p class="subscribe-input"><input type="text" name="Email" size="20" value="Subscribe your e-mail Id"><input type="submit" value="Submit" name="Submit"></p>
+
+	<form method="POST" action="">
+		<p class="subscribe-input"><input type="submit" value="RESTART TIMER" name="Submit"></p>
 	</form>
 
 	<div id="socialIcons">
@@ -50,7 +53,7 @@ Author URL: http://webthemez.com
 		</ul>
 	</div>
 </div>
-<span class="tempBy">Template by: <a href="http://webthemez.com" alt="webthemez">WebThemez.com</a></span>
+<!--<span class="tempBy">Template by: <a href="http://webthemez.com" alt="webthemez">WebThemez.com</a></span>-->
 </div>
 </div>
 
