--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Author URL: http://webthemez.com
 <script type="text/javascript" src="js/jquery.countdown.js"></script>
 <script type="text/javascript" src="js/global.js"></script>
 
-
+<script>
 
 	function decrease() {
 		document.getElementById('lblSecs').value = parseInt(document.getElementById('lblSecs').value) - 1;
@@ -46,6 +46,9 @@ Author URL: http://webthemez.com
 </script>
 
 <script>
+	
+
+
 
 swal({  
   title: " Confirm?",  
