--- a/index.html
+++ b/index.html
@@ -16,17 +16,10 @@ Author URL: http://webthemez.com
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'></link>  
+
 </head>
 
-
-
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js">
-</script>  
-
-<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="js/Backstretch.js"></script>
-<script type="text/javascript" src="js/jquery.countdown.js"></script>
-<script type="text/javascript" src="js/global.js"></script>
+<script src="sweetalert2.all.min.js"></script>
 
 <script>
 
@@ -43,26 +36,6 @@ Author URL: http://webthemez.com
 		$("#timerCont").removeClass('ended').data('countdown').stop();
 	}
 	
-</script>
-
-<script>
-	
-
-
-
-swal({  
-  title: " Confirm?",  
-  text: "Imaginary file",  
-  type: "alert message",  
-  showCancelButton: true,  
-  confirmButtonClass: "btn-danger",  
-  confirmButtonText: " Confirm, remove it!",  
-  closeOnConfirm: false  
-},  
-function(){  
-  swal("remove it!", "Imaginary file remove it.", "Confirm");  
-});  
-
 </script>
 
 <body id="home">
@@ -82,8 +55,38 @@ function(){
 <div id="subscribe">
 
 	<p class="subscribe-input"><input class="control" type="submit" id="restartButton" onclick="restart();" value="START TIMER" name="Submit"> </p>
-	<!-- <input type="submit" onclick="start();" value="STOP TIMER" name="Submit"></p> -->
 
+	<!--
+	<script>
+		
+		$('#restartButton').on('click',function(){
+			let timerInterval
+			swal({
+			title: 'Auto close alert!',
+			html: 'I will close in <b></b> milliseconds.',
+			timer: 2000,
+			timerProgressBar: true,
+			didOpen: () => {
+				Swal.showLoading()
+				const b = Swal.getHtmlContainer().querySelector('b')
+				timerInterval = setInterval(() => {
+				b.textContent = Swal.getTimerLeft()
+				}, 100)
+			},
+			willClose: () => {
+				clearInterval(timerInterval)
+			}
+			}).then((result) => {
+			/* Read more about handling dismissals below */
+			if (result.dismiss === Swal.DismissReason.timer) {
+				console.log('I was closed by the timer')
+			}
+			})
+		})
+		
+		
+	</script>
+	-->
 
 	<div id="socialIcons">
 		<ul>
@@ -98,11 +101,15 @@ function(){
 </div>
 </div>
 
+</body>
+
 <!--Scripts-->
-<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="js/Backstretch.js"></script>
+<!-- <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script> 
+<script type="text/javascript" src="js/Backstretch.js"></script> -->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="js/jquery.countdown.js"></script>
-<script type="text/javascript" src="js/global.js"></script>
+<script type="text/javascript" src="js/global.js"></script> 
 
 <script>
 
